--- a/rack-config.json
+++ b/rack-config.json
@@ -5,7 +5,7 @@
       "doubleSided": true,
       "depth": 120,
       "offsetX": 0,
-      "offsetZ": 0,
+      "offsetZ": -2.5,
       "units": [
         {
           "width": 220,
@@ -56,7 +56,87 @@
           ]
         },
         {
-          "width": 110,
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
           "height": 400,
           "shelves": [
             { "deck": "empty" },
@@ -69,7 +149,7 @@
       "doubleSided": true,
       "depth": 120,
       "offsetX": 0,
-      "offsetZ": 5,
+      "offsetZ": 2.5,
       "units": [
         {
           "width": 220,
@@ -120,7 +200,375 @@
           ]
         },
         {
-          "width": 110,
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        }
+      ]
+    },
+    {
+      "doubleSided": false,
+      "depth": 120,
+      "offsetX": 0,
+      "offsetZ": -6.9,
+      "units": [
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        }
+      ]
+    },
+    {
+      "doubleSided": false,
+      "depth": 120,
+      "offsetX": 0,
+      "offsetZ": 6.9,
+      "units": [
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
+          "height": 400,
+          "shelves": [
+            { "deck": "empty" },
+            { "deck": "empty" }
+          ]
+        },
+        {
+          "width": 220,
           "height": 400,
           "shelves": [
             { "deck": "empty" },
